# code/app/src/main/java/com/jeferro/products/product_reviews/application/DeleteProductReviewHandler.java
@@ -6,7 +6,6 @@ import java.util.Set;
 
 import com.jeferro.products.product_reviews.application.commands.DeleteProductReviewCommand;
 import com.jeferro.products.product_reviews.domain.models.ProductReview;
-import com.jeferro.products.product_reviews.domain.models.ProductReviewId;
 import com.jeferro.products.product_reviews.domain.repositories.ProductReviewsRepository;
 import com.jeferro.products.shared.application.Handler;
 
@@ -27,13 +26,13 @@ public class DeleteProductReviewHandler extends Handler<DeleteProductReviewComma
 
   @Override
   protected ProductReview handle(DeleteProductReviewCommand command) {
-	var username = command.getUsername();
+	var auth = command.getAuth();
 	var productId = command.getProductId();
+	var productReviewId = command.getProductReviewId();
 
-	command.ensureAuthBelongsToUser(username);
-
-	var productReviewId = ProductReviewId.createOf(username, productId);
 	var productReview = productReviewsRepository.findByIdOrError(productReviewId);
+
+	productReview.delete(productId, auth);
 
 	productReviewsRepository.deleteById(productReviewId);
 
